k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-exemple
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
