k8s/mssql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
    - name: http
      protocol: TCP
      port: 1433
      targetPort: 1433
