k8s/recipeapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipeapi-service
spec:
  type: NodePort
  selector:
    app: recipeapi
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
