k8s/recipeapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipeapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: recipeapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipeapi-service
                port:
                  number: 8080
